@@ -56,6 +56,7 @@ admin.caption.metadescriptionhelp=The HTML meta description is a description of 
 admin.caption.nonadminmove=Allow non-admins to move topics
 admin.caption.parser=Parser
 admin.caption.persistence=Persistens
+admin.caption.printnewwindow=Open printable page links in new window
 admin.caption.recentchanges=Reload recent changes
 admin.caption.recentchangesdefault=Default number of recent changes displayed
 admin.caption.recentchangesfail=Failure while loading recent changes\: {0}.
