@@ -44,6 +44,10 @@
 			<required>false</required>
 		</attribute>
 		<attribute>
+			<name>target</name>
+			<required>false</required>
+		</attribute>
+		<attribute>
 			<name>text</name>
 			<required>false</required>
 		</attribute>
